2012-12-23  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* run-tests.sh: Script to run all the regression tests.

2012-12-23  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu: New directory for DejaGnu specific testing
	* dejagnu/baseboards: New directory for ARC specific DejaGnu board
	descriptions.
	* dejagnu/baseboards/arc-linux-aa4.exp,
	* dejagnu/baseboards/arc-sim-base.exp,
	* dejagnu/baseboards/arc-sim-mdb.exp,
	* dejagnu/baseboards/arc-sim.exp, dejagnu/baseboards/arc600-sim.exp,
	* dejagnu/ftp-extra.exp, dejagnu/telnet-extra.exp, site.exp:
	Transferred from ARC 4.4 tool chain in Subversion.

2012-12-23  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* ChangeLog: Incorporated historical record prior to transferring
	to git.

2012-12-12  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-cleanup.sh: New script.

2012-12-12  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-versions.sh: Simplified to use just --auto-checkout and
	--auto-pull options for all repositories.
	* build-all.sh: Add --auto-checkout/--no-auto-checkout and
	--no-auto-pull. Remove linux_user_spec.

2012-12-07  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-linux.sh: New script

2012-09-06  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* ChangeLog: Created
	* symlink-trunks.sh: Fix comparison operations in script.

2012-09-03  Vineet Gupta <vgupta@synopsys.com>

	* build-uclib.sh: Enable verbose building of uClibc.

    Signed-off-by: Vineet Gupta <vgupta@synopsys.com>

2012-09-03  Vineet Gupta <vgupta@synopsys.com>

	* build-all.sh, arc-versions.sh: Don't bother with Linux repo if
	user specifies --linux-dir.

2012-09-03  Vineet Gupta <vgupta@synopsys.com>

	* arc-versions.sh: Typo in prev commit for --auto-pull option.

2012-08-28  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-versions.sh, build-all.sh: Add --auto-pull option.
	* build-all.sh: Ensure exits if GIT checkout fails.

2012-08-27  Vineet Gupta <vgupta@synopsys.com>
